<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/accStates"
        android:icon="@drawable/ic_account_states"
        android:title="@string/menu_account_states" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_transfer"
        android:title="@string/menu_accounts" />

    <item
        android:id="@+id/data"
        android:icon="@drawable/ic_data"
        android:title="@string/menu_data" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/closeSession"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_close_session" />
</menu>