<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.client_detail.support.SupportFragment">

    <ImageView
        android:id="@+id/iv_dev"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/random_image"
        android:src="@drawable/ic_developer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_data"
        android:layout_marginTop="@dimen/common_padding_default"
        />

    <LinearLayout
        android:id="@+id/ll_data"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_dev"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_dev"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_position"
            android:paddingBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_experience"
            android:paddingBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_help"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_mail"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:text="@string/support_send_mail"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>